--- a/DetectionService/src/main/resources/application.yml
+++ b/DetectionService/src/main/resources/application.yml
@@ -2,6 +2,10 @@ server:
   port: 7878
 
 spring:
+  servlet:
+    multipart:
+      max-file-size: 50MB
+      max-request-size: 50MB
   application:
     name: detection-service
 
