RabbitMQ通信修改，解决了队列监听轮询的问题，改用广播。

--- a/CommonConfig/src/main/resources/RabbitMQ.yml
+++ b/CommonConfig/src/main/resources/RabbitMQ.yml
@@ -2,7 +2,8 @@ requestQueue: RequestQueue
 requestExchange: RequestExchange
 requestRoutingKey: Request
 
-resultQueue: ResultQueue
+resultQueueOne: ResultQueueOne
+resultQueueTwo: ResultQueueTwo
 resultExchange: ResultExchange
 resultRoutingKey: Result
 
