--- a/CommonConfig/src/main/resources/jdbc.properties
+++ b/CommonConfig/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/pcb_detection?serverTimezone=Asia/Shanghai&characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://81.71.96.88:3306/pcb_detection?serverTimezone=Asia/Shanghai&characterEncoding=UTF-8
 jdbc.username=root
-jdbc.password=MRLM-ZJWW
+jdbc.password=pcb1234
