--- a/DetectionService/pom.xml
+++ b/DetectionService/pom.xml
@@ -111,6 +111,12 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.0.33</version>
+        </dependency>
+
         <!-- Redisson 分布式锁依赖 -->
         <dependency>
             <groupId>org.redisson</groupId>
