--- a/ReportService/src/main/resources/application.yml
+++ b/ReportService/src/main/resources/application.yml
@@ -8,4 +8,4 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://81.71.96.88:8761/eureka/
