--- a/UserService/pom.xml
+++ b/UserService/pom.xml
@@ -81,7 +81,11 @@
             <version>3.0.3</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.0.33</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
